testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment4.errors.txt
a.js(1,7): error TS2339: Property 'Inner' does not exist on type '{}'.
a.js(4,14): error TS2339: Property 'y' does not exist on type 'Inner'.
a.js(11,23): error TS2339: Property 'Inner' does not exist on type '{}'.
b.js(4,19): error TS2339: Property 'Inner' does not exist on type '{}'.


==== def.js (0 errors) ====
    var Outer = {};
    
==== a.js (3 errors) ====
    Outer.Inner = class {
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
        constructor() {
            /** @type {number} */
            this.y = 12
                 ~
!!! error TS2339: Property 'y' does not exist on type 'Inner'.
        }
    }
    
    /** @type {Outer.Inner} */
    var local
    local.y
    var inner = new Outer.Inner()
                          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
    inner.y
    
==== b.js (1 errors) ====
    /** @type {Outer.Inner} */
    var x
    x.y
    var z = new Outer.Inner()
                      ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type '{}'.
    z.y
    